--- a/gui/res/themes/native.qss
+++ b/gui/res/themes/native.qss
@@ -99,7 +99,7 @@ QToolButton:pressed {
 QSpinBox {
     border-style: outset;
     border-style: solid;
-    border-color: black;
+    border-color: grey;
     color: rgb(230,230,230);
     background-color: rgb(57,57,57);
 }
@@ -121,7 +121,7 @@ QComboBox QWidget {
     border-width: 1px;
     color: rgb(250,250,250);
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(70, 70, 70, 255));
-    selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(70, 70, 70, 255), stop:1 rgb(70, 81, 93));
+    selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgb(141, 141, 106));
 }
 
 QComboBox::drop-down {
@@ -129,6 +129,12 @@ QComboBox::drop-down {
     padding-top: 6px;
     padding-right: 5px;
 }
+
+QComboBox QWidget::item {
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
 
 /********** Line *************/
 QFrame[frameShape="4"] {
@@ -280,7 +286,7 @@ QLineEdit:!read-only {
 
 QProgressBar {
     text-align: center;
-    color: white;
+    color: black;
     border-width: 1px;
     border-radius: 10px;
     border-color: rgb(0,0,0);
@@ -348,8 +354,8 @@ QTabWidget::pane {
     background-color:rgb(62,62,62);
     border-style: solid;
     border-top-width: 1px;
-    border-right-width: 1px;
-    border-left-width: 1px;
+    border-right-width: 0px;
+    border-left-width: 0px;
     border-bottom-width: 0px;
 }
 
@@ -362,12 +368,15 @@ QTabBar::tab {
     border-style: solid;
     border-width: 1px;
     border-color: grey;
+    margin-top: 0px;
+    margin-left: 1px;
+    margin-right: 1px;
 }
 
 QTabBar::tab:hover {
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgb(141, 141, 106));
     margin-top: 0px;
-    margin-left: 0px;
+    margin-left: 1px;
     margin-right: 1px;
 }
 
@@ -375,7 +384,7 @@ QTabBar::tab:selected {
     background-color: grey;
     color: rgb(37,37,37);
     margin-top: 0px;
-    margin-left: 0px;
+    margin-left: 1px;
     margin-right: 1px;
 }
 
