--- a/gui/src/Dialogs/ConfigDialog.ui
+++ b/gui/src/Dialogs/ConfigDialog.ui
@@ -442,6 +442,9 @@
               <height>16777215</height>
              </size>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="styleSheet">
              <string notr="true"/>
             </property>
