--- a/gui/src/engines/ip/Ip.ui
+++ b/gui/src/engines/ip/Ip.ui
@@ -61,6 +61,9 @@
          <height>22</height>
         </size>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="styleSheet">
         <string notr="true"/>
        </property>
@@ -279,7 +282,7 @@
       <number>1</number>
      </property>
      <item>
-      <widget class="QSplitter" name="splitter_3">
+      <widget class="QSplitter" name="splitter">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -370,13 +373,13 @@
                 <number>5</number>
                </property>
                <property name="leftMargin">
-                <number>6</number>
+                <number>2</number>
                </property>
                <property name="topMargin">
                 <number>6</number>
                </property>
                <property name="rightMargin">
-                <number>6</number>
+                <number>0</number>
                </property>
                <property name="bottomMargin">
                 <number>0</number>
@@ -451,6 +454,9 @@
                    <family>MS Shell Dlg 2</family>
                    <pointsize>8</pointsize>
                   </font>
+                 </property>
+                 <property name="focusPolicy">
+                  <enum>Qt::NoFocus</enum>
                  </property>
                  <property name="contextMenuPolicy">
                   <enum>Qt::CustomContextMenu</enum>
@@ -528,7 +534,7 @@
                 <number>0</number>
                </property>
                <property name="topMargin">
-                <number>0</number>
+                <number>6</number>
                </property>
                <property name="rightMargin">
                 <number>0</number>
@@ -543,6 +549,9 @@
                    <family>MS Shell Dlg 2</family>
                    <pointsize>8</pointsize>
                   </font>
+                 </property>
+                 <property name="focusPolicy">
+                  <enum>Qt::NoFocus</enum>
                  </property>
                  <property name="styleSheet">
                   <string notr="true"/>
@@ -685,6 +694,9 @@
                   <family>MS Shell Dlg 2</family>
                   <pointsize>8</pointsize>
                  </font>
+                </property>
+                <property name="focusPolicy">
+                 <enum>Qt::NoFocus</enum>
                 </property>
                 <property name="styleSheet">
                  <string notr="true"/>
